--- a/res/layout/main_menu_layout.xml
+++ b/res/layout/main_menu_layout.xml
@@ -16,5 +16,31 @@
         android:layout_centerHorizontal="true"
         android:text="Main Menu"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <Button
+        android:id="@+id/scanButton"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/textView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="31dp"
+        android:text="Scan" />
+
+    <Button
+        android:id="@+id/shareButton"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/listButton"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="66dp"
+        android:text="Share" />
+
+    <Button
+        android:id="@+id/listButton"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/scanButton"
+        android:layout_centerVertical="true"
+        android:text="List" />
    
 </RelativeLayout>
