--- a/res/layout/activity_view_lists.xml
+++ b/res/layout/activity_view_lists.xml
@@ -27,6 +27,8 @@
             android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:clickable="true"
+            android:onClick="showList"
             android:text="Dumbdumb List"
             android:textAppearance="?android:attr/textAppearanceLarge" />
 
