--- a/res/layout/main_menu_layout.xml
+++ b/res/layout/main_menu_layout.xml
@@ -42,7 +42,7 @@
         android:layout_height="50dp"
         android:layout_alignLeft="@+id/scanButton"
         android:layout_centerVertical="true"
-        android:onClick="showList"
+        android:onClick="showLists"
         android:text="List" />
 
    
