--- a/res/layout/activity_list_view.xml
+++ b/res/layout/activity_list_view.xml
@@ -24,6 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Book Title"
+                android:clickable="true" 
+				android:onClick="showBook"
                 android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <TextView
