--- a/res/layout/activity_view_lists.xml
+++ b/res/layout/activity_view_lists.xml
@@ -56,7 +56,8 @@
         android:layout_alignLeft="@+id/relativeLayout1"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="29dp"
-        android:text="Add List" />
+        android:text="Add List" 
+        android:onClick="createList" />
 
     <Button
         android:id="@+id/button2"
