--- a/res/layout/activity_book_view.xml
+++ b/res/layout/activity_book_view.xml
@@ -9,7 +9,7 @@
     tools:context=".BookView" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/bookTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -18,21 +18,29 @@
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <ImageView
-        android:id="@+id/imageView1"
+        android:id="@+id/bookCover"
         android:layout_width="100dp"
         android:layout_height="150dp"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/bookTitle"
         android:src="@drawable/atlasshrugged" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/bookAuthor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
+        android:layout_alignBaseline="@+id/bookTitle"
+        android:layout_alignBottom="@+id/bookTitle"
         android:layout_centerHorizontal="true"
         android:text="Author Name"
         android:textAppearance="?android:attr/textAppearanceSmall" />
+
+    <TextView
+        android:id="@+id/bookDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="Book Description" />
 
 </RelativeLayout>
