--- a/res/layout/main_menu_layout.xml
+++ b/res/layout/main_menu_layout.xml
@@ -34,7 +34,8 @@
         android:layout_alignLeft="@+id/listButton"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="66dp"
-        android:text="Share" />
+        android:onClick="goToSearch"
+        android:text="Search" />
 
     <Button
         android:id="@+id/listButton"
@@ -45,14 +46,5 @@
         android:onClick="showLists"
         android:text="List" />
 
-    <Button
-        android:id="@+id/goToSearchButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="23dp"
-        android:text="Search"
-        android:onClick="goToSearch" />
    
 </RelativeLayout>
