--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -26,4 +26,7 @@
   <color name="transparent">#00000000</color>
   <color name="viewfinder_laser">#ffcc0000</color> <!-- Android standard ICS color -->
   <color name="viewfinder_mask">#60000000</color>
+  <color name="forest_green">#008000</color>
+  <color name="burgundy">#800000</color>
+  <color name="beige">#ffd06a</color>
 </resources>
