--- a/res/layout/activity_search_for_book.xml
+++ b/res/layout/activity_search_for_book.xml
@@ -38,7 +38,8 @@
       	android:id="@+id/searchResult"
       	android:layout_height="fill_parent"
       	android:layout_width="match_parent"
-      	android:layout_below="@+id/keywordSearchButton">
+      	android:layout_below="@+id/keywordSearchButton"
+      	android:visibility="invisible">
       	<RelativeLayout
       		android:id="@+id/searchResultContents"
       		android:layout_height="fill_parent"
@@ -79,14 +80,21 @@
 	        android:textAppearance="?android:attr/textAppearanceSmall" />
 	
 	    <TextView
-	        android:id="@+id/desription"
+	        android:id="@+id/description"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_alignLeft="@+id/image"
 	        android:layout_below="@+id/image"
 	        android:layout_marginTop="25dp"
 	        android:text="" />
-
+	    
+	    <Button
+	        android:id="@+id/addBookToListButton"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_below="@+id/description"
+	        android:layout_alignParentRight="true"
+	        android:text="Add Book To List"/>
 
 	    </RelativeLayout>
     </ScrollView>
