--- a/res/layout/activity_list_view.xml
+++ b/res/layout/activity_list_view.xml
@@ -8,34 +8,25 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".ListView" >
 
+    <TextView 
+        android:id="@+id/listTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        android:text="Default" />
+    
     <ScrollView
-        android:id="@+id/scrollView1"
-        android:layout_width="match_parent"
+        android:id="@+id/allBooks"
+        android:layout_width="fill_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentLeft="true" >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Book Title"
-                android:clickable="true" 
-				android:onClick="showBook"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Author Name"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-        </LinearLayout>
+        android:layout_below="@id/listTitle">
+		<RelativeLayout
+		    android:id="@+id/allBooksContainer"
+        	android:layout_width="match_parent"
+        	android:layout_height="match_parent" >
+		    
+		</RelativeLayout>
     </ScrollView>
 
    
