linked search to list picker

--- a/res/layout/activity_search_for_book.xml
+++ b/res/layout/activity_search_for_book.xml
@@ -94,7 +94,8 @@
 	        android:layout_height="wrap_content"
 	        android:layout_below="@+id/description"
 	        android:layout_alignParentRight="true"
-	        android:text="Add Book To List"/>
+	        android:text="Add Book To List"
+	        android:onClick="onClickAddBookToList"/>
 
 	    </RelativeLayout>
     </ScrollView>
