--- a/res/layout/activity_view_lists.xml
+++ b/res/layout/activity_view_lists.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/parchmentpaper"
     tools:context=".ViewListsActivity" >
 
     <TextView
@@ -26,8 +27,6 @@
             android:layout_height="match_parent" >
         </RelativeLayout>
     </ScrollView>
-
-    <RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/relativeLayout1"
@@ -60,7 +59,6 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="@color/forest_green" />
         </RelativeLayout>
-    </RelativeLayout>
 
     <Button
         android:id="@+id/button1"
@@ -70,6 +68,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginBottom="29dp"
         android:onClick="createList"
+        android:background="@drawable/btn_green"
         android:text="Add List" />
 
     <Button
@@ -78,6 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/button1"
         android:layout_alignParentRight="true"
+        android:background="@drawable/btn_green"
         android:text="Delete List" />
 
 </RelativeLayout>
