--- a/res/layout/main_menu_layout.xml
+++ b/res/layout/main_menu_layout.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/oldbookphoto"
     tools:context=".MainMenuActivity">
 
     <TextView
@@ -15,6 +16,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:text="Main Menu"
+        android:textSize="32sp"
+        android:textColor="#1A8513"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <Button
@@ -25,6 +28,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="31dp"
         android:onClick="scanNow"
+        android:background="@drawable/btn_green"
         android:text="Scan" />
 
     <Button
@@ -35,6 +39,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="66dp"
         android:onClick="goToSearch"
+        android:background="@drawable/btn_green"
         android:text="Search" />
 
     <Button
@@ -44,6 +49,7 @@
         android:layout_alignLeft="@+id/scanButton"
         android:layout_centerVertical="true"
         android:onClick="showLists"
+        android:background="@drawable/btn_green"
         android:text="List" />
 
    
