--- a/res/layout/activity_after_scan_list_picker.xml
+++ b/res/layout/activity_after_scan_list_picker.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/parchmentpaper"
     tools:context=".AfterScanListPicker" >
 
     <Button
@@ -16,6 +17,7 @@
         android:layout_centerHorizontal="true"
         android:onClick="showCreateList"
         android:layout_marginBottom="51dp"
+        android:background="@drawable/btn_green"
         android:text="Create New List" />
 
     <TextView
