--- a/res/layout/activity_create_list.xml
+++ b/res/layout/activity_create_list.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/parchmentpaper"
     tools:context=".CreateList" >
 
     <TextView
@@ -48,6 +49,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:text="Create List" 
+        android:background="@drawable/btn_green"
         android:onClick="listcreate" />
 
 </RelativeLayout>
