--- a/res/layout/history_list_item.xml
+++ b/res/layout/history_list_item.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/parchmentpaper"
     android:padding="@dimen/standard_padding">
 
   <TextView android:id="@+id/history_title"
